# Musawarah

./: .gitignore  Cargo.toml  README.md  flake.nix  shell.nix
.cargo/: config.toml
.direnv/: flake-profile-1-link
client/: README.md  package.json  pnpm-lock.yaml  svelte.config.js
client/src/: app.d.ts  app.html
client/src/lib/components/: ChapterThumbnail.svelte  Comment.svelte  Gallery.svelte  GalleryItem.svelte  Navbar.svelte  Sidebar.svelte  Text.svelte  User.svelte
client/src/lib/helpers/: transitions.ts
client/src/routes/: +error.svelte  +layout.server.ts  +layout.svelte  +page.server.ts  +page.svelte  stores.ts
client/src/routes/[username]/: +page.server.ts  +page.svelte  +page.ts
client/src/routes/[username]/[comic_id]/: +page.server.ts  +page.svelte
client/src/routes/[username]/[comic_id]/[chapter_id]/: +page.server.ts  +page.svelte
client/src/routes/[username]/[comic_id]/[chapter_id]/chapter-settings/: +page.svelte  +page.ts
client/src/routes/[username]/[comic_id]/[chapter_number]/: +page.server.ts
client/src/routes/[username]/[comic_id]/[chapter_number]/chapter-settings/: +page.ts
client/src/routes/[username]/[comic_id]/new-chapter/: +page.svelte  +page.ts
client/src/routes/[username]/[comic_slug]/: +page.server.ts  +page.svelte
client/src/routes/[username]/[comic_slug]/[chapter_number]/: +page.server.ts  +page.svelte
client/src/routes/[username]/[comic_slug]/[chapter_number]/chapter-settings/: +page.svelte  +page.ts
client/src/routes/[username]/[comic_slug]/new-chapter/: +page.svelte  +page.ts
client/src/routes/[username]/[post_id]/: +page.server.ts  +page.svelte
client/src/routes/confirm-email/[id]/: +page.server.ts  +page.svelte
client/src/routes/login/: +page.server.ts  +page.svelte  +page.ts
client/src/routes/new-comic/: +page.svelte  +page.ts
client/src/routes/register/: +page.svelte  +page.ts
client/src/routes/send-email/: +page.server.ts  +page.svelte
client/static/: app.css
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_user_table.rs  m20230419_074453_create_comics_table.rs  m20230419_075009_create_chapters_table.rs  m20230419_080021_create_chapter_pages_table.rs  m20230422_082609_create_profile_images_table.rs  m20230425_040131_create_comments_table.rs  m20230425_040303_create_comment_parents_table.rs  m20230426_121507_create_user_roles_table.rs  m20230506_092634_create_session_table.rs  m20230517_155027_create_comic_categories_table.rs  m20230517_155027_create_comic_genres_table.rs  m20230517_160145_create_comics_categories_mapping_table.rs  m20230517_160145_create_comics_genres_mapping_table.rs
migrations/: 0001_users.sql  0002_comics.sql  0002_posts.sql  0003_chapters.sql  0003_comments.sql  0004_chapter_pages.sql  0004_parent_child_comments.sql  0005_comments.sql  0005_images.sql  0006_images.sql  0008_profile_image.sql  20230301232714_users.sql  20230301233200_posts.sql
migrations/2023-05-21-124424_create_users_table/: down.sql  up.sql
migrations/2023-05-21-142208_create_comics_table/: down.sql  up.sql
migrations/2023-05-21-142808_create_chapters_table/: down.sql  up.sql
migrations/2023-05-21-150949_create_chapter_pages_table/: down.sql  up.sql
migrations/2023-05-21-155725_create_profile_image_table/: down.sql  up.sql
migrations/2023-05-21-160801_create_sessions_table/: up.sql
migrations/2023-05-21-162651_create_comic_genres_table/: down.sql  up.sql
migrations/2023-05-21-162704_create_comics_genres_mapping_table/: down.sql  up.sql
migrations/2023-05-21-185524_create_comic_comments_table/: down.sql  up.sql
migrations/2023-05-21-190101_create_comic_comments_mapping_table/: down.sql  up.sql
migrations/2023-05-29-170736_create_user_links_table/: down.sql  up.sql
migrations/2023-05-30-222213_create_comic_ratings_table/: down.sql  up.sql
migrations/2023-05-30-222541_create_chapter_ratings_table/: down.sql  up.sql
migrations/2023-07-17-124541_create_email_verifications_table/: up.sql
migrations/2023-08-02-171133_create_chapter_comments_table/: down.sql  up.sql
migrations/2023-08-02-171346_create_chapter_comments_mapping_table/: down.sql  up.sql
src/: auth.rs  lib.rs  main.rs  migrations.rs  schema.rs  sessions.rs  utils.rs
src/chapters/: mod.rs  models.rs  routes.rs
src/comic_genres/: mod.rs  models.rs  routes.rs
src/comics/: mod.rs  models.rs  routes.rs  utils.rs
src/comics/chapters/: mod.rs  models.rs  routes.rs  utils.rs
src/comics/chapters/chapter_comments/: mod.rs  models.rs  routes.rs
src/comics/comic_comments/: mod.rs  models.rs  routes.rs
src/comics/comic_genres/: mod.rs  models.rs  routes.rs
src/common/: mod.rs  models.rs
src/entity/: chapter_pages.rs  chapters.rs  comic_genres.rs  comics.rs  comics_genres_mapping.rs  comment_parents_children.rs  comments.rs  mod.rs  prelude.rs  profile_images.rs  sessions.rs  user_roles.rs  users.rs
src/middlewares/: authenticate.rs
src/posts/: mod.rs  models.rs  routes.rs  utils.rs
src/s3/: helpers.rs  interface.rs  mod.rs  models.rs  routes.rs
src/sessions/: mod.rs  models.rs
src/users/: mod.rs  models.rs  routes.rs
src/users/email_verifications/: mod.rs  models.rs  routes.rs
