[package]
name = "musawarah"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [workspace]
# members = ["."]

[dependencies]
uuid = { version = "1.3.0", features = ["v7", "serde"] }
chrono = { version = "0.4.24", features = ["serde"] }
argon2 = { version = "0.4.1", features = ["parallel"] }
async-trait = "0.1.66"
aws-credential-types = { version = "0.54.1", features = ["hardcoded-credentials"] }
aws-sdk-s3 = "0.24.0"
aws-smithy-http = "0.54.4"
axum = { version = "0.6.16", features = ["macros", "headers", "multipart"] }
bytes = "1.4.0"
derive_builder = "0.12.0"
dotenvy = "0.15.7"
futures = "0.3.26"
futures-util = "0.3.26"
garde = "0.11.2"
http-body = "0.4.5"
pin-project-lite = "0.2.9"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
sync_wrapper = "0.1.2"
tempfile = "3.4.0"
thiserror = "1.0.38"
tokio = { version = "1.25.0", features = ["full"] }
tokio-util = { version = "0.7.7", features = ["compat", "io"] }
tower = "0.4.13"
tower-http = { version = "0.4.0", features = ["trace", "limit", "cors"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
ts-rs = { git = "https://github.com/Aleph-Alpha/ts-rs", rev = "b4ba8b8", features = ["serde-compat", "uuid-impl", "chrono-impl"] }
utoipa = { version = "3.1.0", features = ["axum_extras", "uuid"] }
utoipa-swagger-ui = { version = "3.1.0", features = ["axum"] }
# v7 uuid allows for easier sorting
rand = "0.8.5"
axum_garde = "0.11.2"
itertools = "0.10.5"
axum-extra = { version = "0.7.4" }
time = "0.3.21"
tower-cookies = { version = "0.9.0", features = ["private"] }
tracing-appender = "0.2.2"
diesel = { version = "2.0.4", features = ["postgres", "chrono", "uuid"] }
diesel-async = { version = "0.2.2", features = ["tokio-postgres", "deadpool"] }
diesel_migrations_async = { git = "https://github.com/aumetra/diesel_migrations_async", features = ["postgres"] }
toml = "0.7.4"
lettre = { version = "0.10.4", features = ["tokio1", "tokio1-native-tls", "smtp-transport", "builder"] }

[patch.crates-io]
utoipa = { git = "https://github.com/juhaku/utoipa", rev = "b7020f44890e4472bc17c825f8db3455f30c27a4" }
